--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -260,7 +260,11 @@ a:focus {
 
 .info {
 	font-size: 1.65em;
-	padding: 0 0 4em;
+	padding: 0 0 1em;
+}
+
+.author {
+	padding-left: 4em;
 }
 
 .media-item {
