--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -26,7 +26,7 @@
 body {
 	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #5d5c56;
-	background: #000000;
+	background: #fff;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
