--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -328,6 +328,14 @@ a:focus {
 	max-width: 700px;
 }
 
+.abstract {
+	width: 50%;
+	max-width: 700px;
+	font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-size: 1.5em;
+	color: #939997;
+}
+
 .js-gallery {
 	padding-top: 50px;
 	padding-bottom: 50px;
