--- a/canada/css/style.css
+++ b/canada/css/style.css
@@ -349,9 +349,13 @@ a:focus {
 .js-gallery-content img {
 	max-width: 100%;
 	margin: 10px 0;
+}
+
+figure img{
 	transition: transform 0.25s ease;
 }
-.js-gallery-content img:active {
+
+figure img:active{
 	-webkit-transform: matrix(2, 0, 0, 2, 300, 0);
 	-moz-transform: matrix(2, 0, 0, 2, 300, 0);
 	transform: matrix(2, 0, 0, 2, 300, 0);
